<resources>
    <string name="app_name">LinearLayout_nsaa</string>
    <string name="test">TEST</string>
    <string name="nama2">Nama2</string>
    <string name="nama4">Nama4</string>
    <string name="nama5">Nama5</string>
    <string name="nama1">Nama1</string>
    <string name="nama3">Nama3</string>
    <string name="jobsheet_7">Jobsheet 7</string>
    <string name="riska_amalia_mustaqfiroh">Riska Amalia Mustaqfiroh</string>
    <string name="_2233306">2233306</string>
    <string name="salsabila_habibah">Salsabila Habibah</string>
    <string name="_2233307">2233307</string>
    <string name="uswatun_nisa">Uswatun Nisa</string>
    <string name="_2233308">2233308</string>
    <string name="wildan_saputro_rahmatullah">Wildan Saputro Rahmatullah</string>
    <string name="_2233309">2233309</string>
    <string name="ahmad_yunus_furqon">Ahmad Yunus Furqon</string>
    <string name="_2233276">2233276</string>
    <string name="_02233276">2233276</string>
    <string name="_22332_76">2233276</string>
</resources>